fix overflow.

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
     color: #fff;
     font-weight: bold;
     letter-spacing: 0.05em;
+    overflow-x: hidden;
 }
 .inner {
     display: block;
@@ -44,12 +45,13 @@ body {
 #header .inner {
     display: block;
     width: 100%;
+    max-width: 100%;
     position: relative;
     z-index: 901;
 }
 .header_contents {
     display: block;
-    width: 1110px;
+    width: calc(100% - 60px);
     height: auto;
     position: absolute;
     left: 30px;
@@ -118,7 +120,6 @@ a#header_logo {
     height: 700px;
     background: linear-gradient(-80deg, #C21780 0%, #320C65 50%, #0E002E 100%);
     font-family: 'Montserrat', sans-serif;
-    overflow-x: hidden;
 }
 .top .inner {
     position: relative;
